Build a Fraction: Pictures: Break pieces out of container
Build a Fraction: Pictures: Snap pieces into container
Build a Fraction: Pictures: Removed "My fractions" text
Build a Fraction: Centered level indicator vertically, converted vertical layout to horizontal for scene selection toggle buttons
Build a Fraction: Pictures: Made level toolbar bar move independently for each scene
# 0.00.90 (65259) Jun 18, 2012
Fraction Matcher: Removed debug string and fixed reward test button
Fraction Matcher: Added an animation when the user attains full points for any level
Intro + Equality Lab: Made the border a bit thicker to match the filled shapes
# 0.00.89 (65250) Jun 18, 2012
Fraction Builder: Scale all graphics up so they have the same width
Fraction Builder: Fixed: Buggy behavior when dropping a fraction on 2 matching targets
Fraction Builder: Added Level 10
Fraction Builder: Added Level 9
Fraction Builder: Added Level 8
Fraction Builder: Added Level 7
Fraction Builder: Added Level 6
Fraction Builder: Made background light blue
Fraction Builder: Added a background color chooser
Fraction Builder: Added levels
Fraction Builder: Added levels 1-2
Fraction Builder: Added a "Resample" button for debugging, only enabled when running in dev mode
Fraction Builder: Randomize levels after "reset all" pressed
Fraction Builder: Removed "My Fractions" text
Fraction Builder: Use toggle buttons + icons for "pictures" and "numbers" radio buttons
# 0.00.88 (65186) Jun 17, 2012
Fraction Builder: Added a little more vertical spacing between scoring cells
Fraction Builder: Added a little more vertical space between "my fractions" and the scoring cells
Fraction Builder: When ejecting a fraction from the scoring cell, all the parts go back to the toolbox
Fraction Builder: Removed score readout
Fraction Builder: Have vertical bars fill in from the left
Fraction Builder: Fixed: "Next" button font under smilie face is too small